--- a/dlnd_tv_script_generation.ipynb
+++ b/dlnd_tv_script_generation.ipynb
@@ -13,9 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -214,9 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -236,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,17 +719,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch   0 Batch    0/2   train_loss = 8.820\n",
-      "Epoch   2 Batch    1/2   train_loss = 8.820\n",
-      "Epoch   5 Batch    0/2   train_loss = 8.820\n",
-      "Epoch   7 Batch    1/2   train_loss = 8.820\n",
+      "Epoch   0 Batch    0/2   train_loss = 8.822\n",
+      "Epoch   2 Batch    1/2   train_loss = 8.822\n",
+      "Epoch   5 Batch    0/2   train_loss = 8.822\n",
+      "Epoch   7 Batch    1/2   train_loss = 8.822\n",
       "Model Trained and Saved\n"
      ]
     }
@@ -781,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -801,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -834,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -876,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -924,14 +920,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "moe_szyslak: intense power los someone's fine-lookin' waters waters diamond lighter quimby_#2: too day name: scammin' rule koji cheaper impatient stories undermine lights turlet ze-ro frightened cosmetics activity diamond country-fried liquor grammy mob koji fonzie tsk innocence innocence magnanimous appealing 'evening night cheaper load this'll renew wally: obsessive-compulsive states astronauts man_with_crazy_beard: smokes facebook ideas hers stonewall kiddin' fine-lookin' eve excited fuss kiddin' jackass bullet-proof progress dramatically common holy swigmore highball japanese hair bathtub hair bathtub hair learned wake sack kl5-4796 intervention data spaghetti-o's sangre license cyrano wallet's dessert journey vestigial vigilante stirrers project sat-is-fac-tion boxcars carney oopsie impatient stories undermine lights jeff_gordon: covering chic tiny preparation prepared dying excuse paramedic: vigilante fingers absolutely possessions yelp when-i-get-a-hold-of-you rules rules tragedy tragedy caught pick pep enjoyin' philosophic frankenstein superhero pep ideas barney-shaped_form: name: scammin' vodka go-near- thousand-year carney journey experience clenched ha pep portfolium yee-ha scammin' punk maxed disappointed ha ha ha ha can't-believe-how-bald-he-is pep alpha-crow punk can't-believe-how-bald-he-is here-here-here sat-is-fac-tion family-owned carney oopsie impatient load lost coffee'll low 'evening william heavyweight yup drinker jamaican jamaican entirely brandy understanding truck_driver: xx down magic i-i-i gin xx forbids slender man_with_crazy_beard: meal fonzie relieved manuel relieved assassination hmm project project vigilante thank 35 tree's tree's break-up can't-believe-how-bald-he-is\n"
+      "moe_szyslak: shower funeral just sat mr terrific lib manipulation yee-haw lib yee-haw re: almost industry industry authenticity industry confidentially lights colorado control hustle à look look church control control hustle à look look look subject church rude alarm bitter offense moe_recording: toasting pageant mither takeaway etc crippling lingus girlfriend selma_bouvier: gift buyin' settlement design closed beeps homeless contractors savagely delicately corner beeps wednesday crippling lingus ails moe-clone general wang promised betrayed promised promised businessman_#2: portentous funeral heave-ho fireball thanks saving knuckles ails eight-year-old huhza har sat since manipulation yee-haw offense away girlfriend yee-haw re: almost industry industry authenticity industry confidentially lights colorado control hustle à look look church control control hustle à look look look subject church rude alarm bitter offense moe_recording: toasting pageant mither takeaway etc crippling lingus girlfriend selma_bouvier: gift buyin' settlement design closed beeps homeless contractors savagely delicately corner beeps wednesday crippling lingus ails moe-clone general wang promised betrayed promised promised businessman_#2: portentous funeral heave-ho fireball thanks saving knuckles ails eight-year-old huhza har sat since manipulation yee-haw offense away girlfriend yee-haw re: almost industry industry authenticity industry confidentially lights colorado control hustle à look look church control control hustle à look look look subject church rude alarm bitter\n"
      ]
     }
    ],
