--- a/dlnd_tv_script_generation.ipynb
+++ b/dlnd_tv_script_generation.ipynb
@@ -1601,7 +1601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1634,7 +1634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1676,7 +1676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1697,12 +1697,11 @@
     "    :param int_to_vocab: Dictionary of word ids as the keys and words as the values\n",
     "    :return: String of the predicted word\n",
     "    \"\"\"\n",
-    "\n",
-    "    probabilities = pow(probabilities - random.random(),2)\n",
-    "    minP = min(probabilities)\n",
+    "    \n",
+    "    maxP = max(probabilities)\n",
     "    next_word = \"\"\n",
-    "    for ii, probabilitie in enumerate(probabilities, 1):\n",
-    "        if minP == probabilitie:\n",
+    "    for ii, probabilitie in enumerate(probabilities, 0):\n",
+    "        if maxP == probabilitie:\n",
     "            next_word = int_to_vocab[ii]\n",
     "            break\n",
     "  \n",
@@ -1724,14 +1723,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "moe_szyslak: kinda ha scrutinizing inside pointedly panicked three panicked panicked panicked panicked successful scully inside panicked scrutinizing panicked aw inside pointedly inside panicked banquo panicked dentist panicked panicked literary hates panicked panicked panicked scrutinizing panicked panicked panicked panicked panicked scrutinizing panicked panicked scrutinizing panicked scrutinizing pointedly inside pointedly inside inside three zoomed inside cloudy spy panicked chubby panicked successful fresco panicked dentist panicked successful inside inside inside panicked chubby inside inside panicked scrutinizing inside panicked zoomed klingon dentist panicked boston klingon or typed end bowled end lard inside panicked successful defected panicked passed panicked panicked scrutinizing inside inside panicked banquo panicked adequate panicked panicked panicked zoomed scrutinizing panicked scrutinizing panicked panicked literary inside inside panicked zoomed smithers inside pointedly pointedly inside inside inside panicked zoomed inside inside panicked aw booger chubby panicked inside panicked inside cloudy boston panicked dentist panicked klingon boston klingon weary told end told johnny_carson: inside pointedly pointedly pointedly pointedly cloudy inside inside panicked banquo inside panicked panicked panicked adequate inside panicked zoomed scrutinizing or dentist panicked panicked panicked panicked panicked scrutinizing panicked adequate panicked scrutinizing panicked panicked panicked scrutinizing scrutinizing panicked scrutinizing scrutinizing inside pointedly panicked banquo panicked adequate pointedly inside panicked adequate panicked panicked banquo pointedly\n"
+      "moe_szyslak:(into phone) gotcha ya down for forty bucks. good luck your eminence.\n",
+      "moe_szyslak: sorry, homer.\n",
+      "homer_simpson:(looking at watch) ah. finished with fifteen seconds to you.\n",
+      "kent_brockman:(to self) she's your lenny_leonard: that's so i'll be thankful to michael, but i am.\n",
+      "moe_szyslak: uh, what are you gonna do with the money, homer?\n",
+      "homer_simpson: not a thing in the bar!\n",
+      "moe_szyslak: come on!\n",
+      "homer_simpson: how about you, lenny?\n",
+      "lenny_leonard:(nods) mm hmm. the team's been terrible, because we never have barney again.\n",
+      "moe_szyslak:(shakes out) hey, moe.\n",
+      "moe_szyslak:(quickly) hey, hey, hey!(no rhyme) this is a great neck is right to me.\n",
+      "moe_szyslak:(covering) uh-oh. you're at moe.\n",
+      "moe_szyslak: i wouldn't-a had none of this without you, kid.\n",
+      "moe_szyslak:(turning on a dime) mayor quimby?!\n",
+      "moe_szyslak: i'll take it...\n",
+      "homer_simpson:(excited)\n"
      ]
     }
    ],
@@ -1791,13 +1805,6 @@
     "# Submitting This Project\n",
     "When submitting this project, make sure to run all the cells before saving the notebook. Save the notebook file as \"dlnd_tv_script_generation.ipynb\" and save it as a HTML file under \"File\" -> \"Download as\". Include the \"helper.py\" and \"problem_unittests.py\" files in your submission."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
